--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -3,13 +3,101 @@
 	xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
+<style>
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+h1 {
+  text-shadow: 2px 2px 5px red;
+}
+.btn10 {
+  background-color: #4CAF50; 
+  border: none;
+  color: white;
+  padding: 15px;
+  text-align:center;
+  text-decoration:none;
+  display: inline-block;
+  font-size:18px;
+  margin: 4px 2px;
+  cursor: pointer;
+  width:20%;
+  border-radius:10px;
+}
+.hero-image {
+  background-image: url("https://www.comboinfinito.com.br/principal/wp-content/uploads/2019/05/dr-stone-anime-brasil.jpg");
+  background-color: #cccccc;
+  height: 690px;
+  background-position: cover;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position:cover;
+  transition-duration:2.5s;
+}
+.hero-image:hover{
+  width: ;
+  background-image: url("http://blogs.opovo.com.br/bancadoanime/wp-content/uploads/sites/59/2018/09/Dr.Stone_.jpg");
+  background-color;
+  height: 400px;
+  background-position:cover;
+  background-repeat:no-repeat;
+  background-size:cover;
+  position:cover;
+  margin: 1px 1px;
+  opacity:0.9;
+  
+  
+}
+
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #FF711C;
+}
+.button10 {
+  
+  background-color:#7093DB; 
+  border: none;
+  color: white;
+  padding: 15px;
+  text-align:center;
+  text-decoration:none;
+  display: inline-block;
+  font-size:18px;
+  margin: 4px 2px;
+  cursor: pointer;
+  width:20%;
+  border-radius:10px;
+
+}
+.imageb{
+  background-color:black;
+  background-image:url("https://steamcdn-a.akamaihd.net/steamcommunity/public/images/items/405640/5f606fab3bb7cd57d07bc5fa0c2dd61b64e07fa1.jpg");
+  height: 690px;
+  background-position: cover;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position:cover;
+  
+}
+.textC{
+	color:#7CD9FF;
+	font-size:20px;
+	text-transform: uppercase; 
+
+}
+</style>
 <title>Editar Produto</title>
 </head>
-<body>
-	<div align="center">
-		<h1>Editar produto</h1>
+<body class="imageb" >
+	<div align="center" class="hero-image" >
+		<h1 >Editar produto</h1>
 		<br/>
-		<form action="#" th:action="@{/save}" th:object="${product}"
+		<form class="textC" action="#" th:action="@{/save}" th:object="${product}"
 			method="post">
 			<table border="0" cellpadding="10">
 
@@ -39,7 +127,7 @@
 					<td><input type="text" th:field="*{price}" /></td>
 				</tr>
 				<tr>
-					<td colspan="2"><button type="submit">Salvar</button></td>
+					<td colspan="2"><button class="btn10" type="submit">Salvar</button></td>
 				</tr>
 			</table>
 
