--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,17 +3,106 @@
       xmlns:th="http://www.thymeleaf.org" >
 
 <head>
+<style>
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+h1 {
+  text-shadow: 2px 2px 5px red;
+}
+.btn10 {
+  background-color: #4CAF50; 
+  border: none;
+  color: white;
+  padding: 15px;
+  text-align:center;
+  text-decoration:none;
+  display: inline-block;
+  font-size:18px;
+  margin: 4px 2px;
+  cursor: pointer;
+  width:20%;
+  border-radius:10px;
+}
+.hero-image {
+  background-image: url("https://www.comboinfinito.com.br/principal/wp-content/uploads/2019/05/dr-stone-anime-brasil.jpg");
+  background-color: #cccccc;
+  height: 690px;
+  background-position: cover;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position:cover;
+  transition-duration:2.5s;
+}
+.hero-image:hover{
+  width: ;
+  background-image: url("http://blogs.opovo.com.br/bancadoanime/wp-content/uploads/sites/59/2018/09/Dr.Stone_.jpg");
+  background-color;
+  height: 400px;
+  background-position:cover;
+  background-repeat:no-repeat;
+  background-size:cover;
+  position:cover;
+  margin: 1px 1px;
+  
+  
+  
+}
+
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #FF711C;
+}
+.button10 {
+  
+  background-color:#7093DB; 
+  border: none;
+  color: white;
+  padding: 15px;
+  text-align:center;
+  text-decoration:none;
+  display: inline-block;
+  font-size:18px;
+  margin: 4px 2px;
+  cursor: pointer;
+  width:20%;
+  border-radius:10px;
+
+}
+.imageb{
+  background-color:black;
+  background-image:url("https://steamcdn-a.akamaihd.net/steamcommunity/public/images/items/405640/5f606fab3bb7cd57d07bc5fa0c2dd61b64e07fa1.jpg");
+  height: 690px;
+  background-position: cover;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position:cover;
+  
+}
+.textC{
+	color:#7CD9FF;
+	font-size:20px;
+	text-transform: uppercase; 
+
+}
+</style>
+
 <meta charset="utf-8">
 <title>Loja</title>
 </head>
-<body>
-<div align="center">
+<body class="imageb">
+<div align="center"  class="hero-image">
 	<h1>Lista de produtos</h1>
-	<a href="new">Criar novo produto</a>
+	<a href="new"  >Criar novo produto</a>
 	<br></br>
 	<table border="1" cellpadding="10">
 		<thead>
-			<tr>
+			<tr class="textC">
 				<th>Produto id</th>
 				<th>Nome</th>
 				<th>Marca</th>
@@ -23,16 +112,16 @@
 			</tr>	
 		</thead>
 		<tbody>
-			<tr th:each="product: ${listProducts}">
+			<tr class="textC" th:each="product: ${listProducts}">
 				<td th:text="${product.id}">Produto id</td>
 				<td th:text="${product.name}">nome</td>
 				<td th:text="${product.brand}">marca</td>
 				<td th:text="${product.madein}">made in</td>
 				<td th:text="${product.price}">Preco</td>
 				<td>
-					<a th:href="@{'/edit/' + ${product.id}}">Editar</a>
+					<a class="btn10" th:href="@{'/edit/' + ${product.id}}">Editar</a>
 					&nbsp;&nbsp;&nbsp;
-					<a th:href="@{'/delete/' + ${product.id}}">Deletar</a>
+					<a  class="button10" th:href="@{'/delete/' + ${product.id}}">Deletar</a>
 				</td>
 			</tr>
 		</tbody>
